--- a/src/index.html
+++ b/src/index.html
@@ -12,4 +12,5 @@
   <body>
     <app-root></app-root>
   </body>
+  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </html>
